Refactor, fix profile jsons